--- a/tox.ini
+++ b/tox.ini
@@ -1,39 +1,18 @@
 [tox]
-envlist = py27,pypy,py32,py33,py26,flake8
+envlist = py26,py27,pypy,py32,py33,flake8
+skipsdist = True
+
 [testenv]
-commands = nosetests
+commands =
+ pip install --allow-all-external -e .
+ nosetests
 deps =
- nose
- setuptools
- rply
-
-[testenv:pypy]
-commands = nosetests
-deps =
- astor
- nose
- setuptools
- rply
-
-[testenv:py27]
-commands = nosetests
-deps =
- astor
- nose
- setuptools
- rply
+ -rrequirements-dev.txt
 
 [testenv:py26]
 deps =
- astor
- nose
- setuptools
+ {[testenv]deps}
  unittest2
- importlib
- rply
 
 [testenv:flake8]
-deps =
- flake8
- rply
 commands = flake8 hy bin tests
